Support Windows 11 build numbers
Add new function Run-BCPTTestsInBcContainer
Issue #2129 add Windows 10 21H2
Support disabledTests.json in testfolders in Run-AlPipeline
Issue #2130 patch start.ps1 if using an old generic image on pre 15.0 NAV/BC

2.0.16
Issue #2023 Invoke-NavContainerAPI doesnt support nested hashtables
Add ApplicationInsightsConnectionString to Run-AlPipeline to support new app.json property. This value will be used instead of ApplicationInsightsKey if runtime >= 7.2 or bcVersion >= 18.2. (Thanks TheNCuber)
Support different extension on license files (thanks SBalslev)
Map Ukraine to w1 in mapCountryCode, allowing to create ua containers (thanks Sergeyol)
Add parameter CustomCodeCops to Run-AlPipeline and Compile-AppInBcContainer to allow for specifying custom code cops (thanks jfamvg)
Use Latest shipped AL Language Extension by default for all shipped version in Run-AlValidation
Increased support for Github Actions in Run-AlPipeline and Run-TestsInBcContainer
Convert-BcAppsToRuntimePackages: Allow to skip failing apps, run scriptblock after each processed runtime (Thanks MODUSCarstenScholling)
Allow runtime packages as previous apps run Run-AlPipeline (Thanks MODUSCarstenScholling)
Unpublish app in multitenant container fails if the app is installed in multiple tenants (Thanks lktraser)
Fixing bug in Resolve-DependenciesFromAzureFeed that downloaded all apps from first lvl (Thanks jonaswer)
Remove countries which have their own artifacts from mapCountryCode
Add Windows 11 / ltsc2022 support
Run-AlValidation sometimes returns error AL1040: The guid number '' does not match the expected pattern: "^[0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{12}$".
Add Parameter appVersion to Run-AlPipeline to stamp in full version number during build
Skip ConnectionTest by default on Run-AlValidation
Issue #2069 New-BcImage - incorrect evaluation resulting $forceRebuild is true always for us.