@@ -5,6 +5,11 @@ Add new function Run-BCPTTestsInBcContainer
 Issue #2129 add Windows 10 21H2
 Support disabledTests.json in testfolders in Run-AlPipeline
 Issue #2130 patch start.ps1 if using an old generic image on pre 15.0 NAV/BC
+Fix issue where a session cannot be created to a newly created container before ~5 minutes on Windows 11
+Add BcptTestFolders to Run-AlPipeline
+Remove Performance Tool shortcut if created
+New-BcImage fails on newer Windows versions due to RoboCopy offload
+Do not use runtime packages in Import-TestToolkitToBcContainer
 
 2.0.16
 Issue #2023 Invoke-NavContainerAPI doesnt support nested hashtables
